k8s/auth-service/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 8001
      protocol: TCP
      targetPort: 8001
