k8s/auth-service/base/ingress-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-http-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: http.auth.money-tracker.vasapolrittideah.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  name: http
